--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "module-13-challenge-orm",
   "version": "1.0.0",
-  "description": "",
+  "description": "A working back-end of an e-commerce site with products, categories and tags. Powered by Express, Sequelize and MySQL.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,9 +20,9 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mysql2": "^2.1.0",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
     "sequelize": "^5.21.7"
   }
 }
